--- a/cloud-config-server/src/main/resources/application.properties
+++ b/cloud-config-server/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 server.port=1111
-#spring.cloud.config.server.git.uri=https://git.oschina.net/zhou666/spring-cloud-7simple.git
-#spring.cloud.config.server.git.searchPaths=cloud-config-repo
-spring.application.name=cloud-config-server
-spring.cloud.config.server.native.searchLocations=../cloud-config-repo
 spring.profiles.active=native
-eureka.instance.hostname=localhost
-eureka.client.serviceUrl.defaultZone=http\://${eureka.instance.hostname}\:8888/eureka/
+spring.application.name=cloud-config-server
+#spring.cloud.config.server.native.searchLocations=../cloud-config-repo
+# 配置git仓库地址
+spring.cloud.config.server.git.uri=https://github.com/gdh7732/cloud-vue-parent.git
+# 配置仓库路径
+spring.cloud.config.server.git.search-paths=cloud-config-repo
+# 配置仓库的分支
+spring.cloud.config.label=master
+eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8888/eureka/
