--- a/cloud-simple-service/src/main/resources/bootstrap.properties
+++ b/cloud-simple-service/src/main/resources/bootstrap.properties
@@ -1,23 +1,22 @@
 server.port=80
-
-spring.cloud.config.profile=dev
-spring.cloud.config.uri=http://${cofig.host:localhost}:${config.port:1111}
-spring.cloud.config.name=cloud-config
-#${config.profile:dev}
-#service discovery url
-eureka.client.serviceUrl.defaultZone=http\://${eureka.host:localhost}\:${eureka.port:8888}/eureka/
 #service name
 spring.application.name=cloud-simple-service
+eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8888/eureka/
+
+spring.cloud.config.profile=dev
+spring.cloud.config.uri=http://127.0.0.1:1111
+spring.cloud.config.name=cloud-config
+
 
 #spring profiles
 spring.profiles.active=dev
-spring.profiles.include=swagger
+#spring.profiles.include=swagger
 #spring devtools
 spring.devtools.restart.enabled=false
 spring.devtools.livereload.enabled=false
 
 #zipkin
-spring.zipkin.base-url=http://localhost:9012
+spring.zipkin.base-url=http://127.0.0.1:9012
 
 
 
